--- a/index.html
+++ b/index.html
@@ -14,25 +14,25 @@
 <body class="start-page"> 
     <header class="header">
         <div class="container">
-            <a href="" class="header-logo link">Web<span class="header-logo-black link">Studio</span></a> 
-        <ul class="header-list list ">
-            <li class="header-item"><a href="" class="header-link head-text current link">Студия</a></li>
-            <li class="header-item"><a href="./portfolio.html" class="header-link head-text link">Портфолио</a></li>
-            <li class="header-item"><a href="" class="header-link head-text link">Контакты</a></li>
+            <a href="" class="logo header-logo link">Web<span class="logo__style logo--black link">Studio</span></a> 
+        <ul class="menu-list list ">
+            <li class="menu-list__item"><a href="" class="menu-list__link head-text current link">Студия</a></li>
+            <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link head-text link">Портфолио</a></li>
+            <li class="menu-list__item"><a href="" class="menu-list__link head-text link">Контакты</a></li>
         </ul>
     
-        <div class="header-nav">
-        <nav class="header-navigation">
+        <div class="navigation header-navigation">
+        <nav class="nav">
             
-            <ul class="header-address list">
-                <li class="header-contacts"><a href="mailto:info@devstudio.com" class="header-mail-link head-text link">
-                    <svg class="header-mail-icon" width="16" height="12">
+            <ul class="address list">
+                <li class="address__item"><a href="mailto:info@devstudio.com" class="address__mail head-text link">
+                    <svg class="address__mail-icon" width="16" height="12">
                         <use href="./images/symbol-defs.svg#icon-envelope"></use>
                     </svg>info@devstudio.com
                 </a>
                 </li>
-                <li class="header-contacts"><a href="tel:+380961111111" class="header-tel-link head-text link">
-                    <svg class="header-tel-icon" width="10" height="16">
+                <li class="address__item"><a href="tel:+380961111111" class="address__tel head-text link">
+                    <svg class="address__tel-icon" width="10" height="16">
                         <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11
                 </a>
