--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
  
 <body class="start-page"> 
+    
     <header class="header">
         <div class="container">
             <a href="" class="logo header-logo link">Web<span class="logo__style logo--black link">Studio</span></a> 
@@ -314,41 +315,41 @@
     </main>
 
     <footer class="footer">
-<div class="container">
-    <div class="footer-address">
-        <a href="" class="footer-logo link">Web<span class="footer-logo-white link">Studio</span></a> 
-        <address class="address">
-            <ul class="address-list list">
-                <li class="address-item"><a href="" class="footer-address-street secondary-text link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="address-item"><a href="mailto:info@example.com" class="footer-mail-link secondary-text link">info@example.com</a></li>
-                <li class="address-item"><a href="tel:+380991111111" class="footer-tel-link secondary-text link">+38 099 111 11 11</a></li>
+<div class="container footer__container">
+    <div class="footer__address">
+        <a href="" class="logo footer-logo link">Web<span class="logo__style logo--white link">Studio</span></a> 
+        <address class="contacts">
+            <ul class="contacts-list list">
+                <li class="contacts-list__item"><a href="" class="contacts-list__address secondary-text link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="contacts-list__item"><a href="mailto:info@example.com" class="contacts-list__mail secondary-text link">info@example.com</a></li>
+                <li class="contacts-list__item"><a href="tel:+380991111111" class="contacts-list__tel secondary-text link">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </div>
 
-        <div class="footer-social">
-            <h3 class="footer-social-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
-            <ul class="footer-social-list list">
-                <li class="footer-social-item"><a href="" class="footer-social-link link">
-                    <svg class="footer-social-icon" width="20" height="20">
+        <div class="social footer-social">
+            <h3 class="social__title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+            <ul class="connect list">
+                <li class="connect__item"><a href="" class="connect__link link">
+                    <svg class="connect__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-                <li class="footer-social-item"><a href="" class="footer-social-link link">
-                    <svg class="footer-social-icon" width="20" height="20">
+                <li class="connect__item"><a href="" class="connect__link link">
+                    <svg class="connect__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
-                <li class="footer-social-item"><a href="" class="footer-social-link link">
-                    <svg class="footer-social-icon" width="20" height="20">
+                <li class="connect__item"><a href="" class="connect__link link">
+                    <svg class="connect__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-                <li class="footer-social-item"><a href="" class="footer-social-link link">
-                    <svg class="footer-social-icon" width="20" height="20">
+                <li class="connect__item"><a href="" class="connect__link link">
+                    <svg class="connect__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                 </a>
@@ -356,15 +357,15 @@
             </ul>
         </div>
 
-        <form class="mailing-list">
+        <form class="subscribe mailing-list">
 
-            <p class="mailing-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-            <div class="subscribe-field" role="group">
-              <input class="subscribe-email" type="email" name="subscribe" placeholder="E-mail" />
+            <p class="subscribe__title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+            <div class="subscribe__field" role="group">
+              <input class="subscribe__email" type="email" name="subscribe" placeholder="E-mail" />
 
-              <button class="subscribe-btn" type="submit">
-                <span class="subscribe-text">Подписаться</span>
-                <svg class="subscribe-icon" width="24" height="24">
+              <button class="subscribe__btn" type="submit">
+                <span class="subscribe__text">Подписаться</span>
+                <svg class="subscribe__icon" width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-send"></use>
                 </svg>
               </button>
