--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
          rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css" />  
+    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+    <link rel="stylesheet" href="./css/main.css" />  
 </head>
  
 <body class="start-page"> 
@@ -57,7 +58,7 @@
         
         <section class="about about-section">
             <div class="container">
-            <ul class="features__list list">
+            <ul class="features list">
         <li class="features__item">
             <div class="features__icon">
                 <svg class="features__image" width="70" height="70">
@@ -102,7 +103,7 @@
             <div class="container">
             <h2 class="study__title">Чем мы занимаемся</h2>
             
-            <ul class="work__list list">
+            <ul class="work list">
                 <li class="work__item">
                     <div class="work__box">
                     <img src="./images/photo_hands_1.jpg" alt="руки на клавиатуре"
