--- a/index.html
+++ b/index.html
@@ -103,26 +103,26 @@
             <div class="container">
             <h2 class="study__title">Чем мы занимаемся</h2>
             
-            <ul class="work list">
-                <li class="work__item">
-                    <div class="work__box">
+            <ul class="study-list list">
+                <li class="study-list__item">
+                    <div class="study-list__box">
                     <img src="./images/photo_hands_1.jpg" alt="руки на клавиатуре"
                      width="370" height="294">
-                    <p class="work__title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+                    <p class="study-list__title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
                     </div>
                     </li>
-                <li class="work__item">
-                    <div class="work__box">
+                <li class="study-list__item">
+                    <div class="study-list__box">
                     <img src="./images/photo_hands_2.jpg" alt="в руке телефон"
                     width="370" height="294">
-                <p class="work__title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                <p class="study-list__title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
                     </div>
                 </li>
-                <li class="work__item">
-                    <div class="work__box">
+                <li class="study-list__item">
+                    <div class="study-list__box">
                     <img src="./images/photo_hands_3.jpg" alt="в руке планшет"
                     width="370" height="294">
-                <p class="work__title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                <p class="study-list__title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
                     </div>
                 </li>
             </ul>
@@ -315,7 +315,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer footer-section">
 <div class="container footer__container">
     <div class="footer__address">
         <a href="" class="logo footer-logo link">Web<span class="logo__style logo--white link">Studio</span></a> 
