--- a/portfolio.html
+++ b/portfolio.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
          rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+   
     <link rel="stylesheet" href="./css/main.css" /> 
 </head>
 
 <body class="start-page">
 
-    <header class="portfolio">
+    <header class="header">
         <div class="container">
             <a href="" class="logo header-logo link">Web<span class="logo__style logo--black link">Studio</span></a>
 
@@ -193,7 +193,7 @@
 
     </main>  
     
-    <footer class="footer">
+    <footer class="footer footer-section">
         <div class="container footer__container">
             <div class="footer__address">
                 <a href="" class="logo footer-logo link">Web<span class="logo__style logo--white link">Studio</span></a> 
