--- a/index.html
+++ b/index.html
@@ -270,42 +270,42 @@
         </div>
         </section>
 
-        <section class="clients">
+        <section class="section section-clients">
             <div class="container">
-            <h2 class="clients-title">Постоянные клиенты</h2>
-            <ul class="clients-list list">
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+            <h2 class="section__title">Постоянные клиенты</h2>
+            <ul class="clients list">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
                     </svg>
                 </a>
             </li>
-                <li class="clients-item"><a href="" class="clients-link">
-                    <svg class="clients-link-icon" width="106" height="60">
+                <li class="clients__item"><a href="" class="clients__link">
+                    <svg class="clients__icon" width="106" height="60">
                         <use href="./images/symbol-defs.svg#icon-Logo-6"></use>
                     </svg>
                 </a>
@@ -316,7 +316,7 @@
     </main>
 
     <footer class="footer footer-section">
-<div class="container footer__container">
+<div class="container">
     <div class="footer__address">
         <a href="" class="logo footer-logo link">Web<span class="logo__style logo--white link">Studio</span></a> 
         <address class="contacts">
