--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
     </main>  
     
     <footer class="footer footer-section">
-        <div class="container footer__container">
+        <div class="container">
             <div class="footer__address">
                 <a href="" class="logo footer-logo link">Web<span class="logo__style logo--white link">Studio</span></a> 
                 <address class="contacts">
